# compiler-principle-lab1

./: CMakeLists.txt  README.md
bits/: CMakeLists.txt
bits/include/bits/: allds.hpp
bits/src/: node.cpp  pNode.cpp  token.cpp
main/: CMakeLists.txt
main/include/main/: main.hpp
main/src/: main.cpp
parser/: CMakeLists.txt  lexer.l  parser.y
parser/include/parser/: parser.hpp
parser/src/: parser.cpp
test/: test_int.txt
